lib/bait/tests/inout_error/loop_label.out
lib/bait/tests/inout_error/loop_label.in.bt:2:6 error: label my_label not found
