lib/bait/tests/inout_error/loop_label.in.bt
for true {
	break my_label
}
